updated ptm pages

--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -194,7 +194,7 @@ sudo make install
     <td><p align="justify">GPU temperature, &deg;C, <code>----</code>. <code>aticonfig</code> or <code>nvidia-smi</code> must be installed.</p></td>
   </tr>
   <tr>
-    <th rowspan="3">Memory label</th>
+    <th rowspan="5">Memory label</th>
     <td><code>$mem</code></td>
     <td><p align="justify">Memory usage, %, <code>-----</code>.</p></td>
   </tr>
@@ -205,6 +205,14 @@ sudo make install
   <tr>
     <td><code>$memgb</code></td>
     <td><p align="justify">Memory usage, GB, <code>----</code>.</p></td>
+  </tr>
+  <tr>
+    <td><code>$memtotmb</code></td>
+    <td><p align="justify">RAM, MB, <code>-----</code>.</p></td>
+  </tr>
+  <tr>
+    <td><code>$memtotgb</code></td>
+    <td><p align="justify">RAM, GB, <code>----</code>.</p></td>
   </tr>
   <tr>
     <th rowspan="3">Swap label</th>
@@ -218,6 +226,14 @@ sudo make install
   <tr>
     <td><code>$swapgb</code></td>
     <td><p align="justify">Swap usage, GB, <code>----</code>.</p></td>
+  </tr>
+  <tr>
+    <td><code>$swaptotmb</code></td>
+    <td><p align="justify">Swap, MB, <code>-----</code>.</p></td>
+  </tr>
+  <tr>
+    <td><code>$swaptotgb</code></td>
+    <td><p align="justify">Swap, GB, <code>----</code>.</p></td>
   </tr>
   <tr>
     <th rowspan="3">HDD usage label</th>
