--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -97,11 +97,11 @@ sudo make install
   </tr>
   <tr>
     <th>GPUDEV</th>
-    <td><p align="justify">Устанавливает тип GPU. Может быть <code>nvidia</code> (для nVidia), <code>ati</code> (для ATI Radeon), <code>ignore</code> или <code>auto</code>. По умолчанию <code>auto</code>.</p></td>
+    <td><p align="justify">Устанавливает тип GPU. Может быть <code>nvidia</code> (для nVidia), <code>ati</code> (для ATI Radeon), <code>disable</code> или <code>auto</code>. По умолчанию <code>auto</code>.</p></td>
   </tr>
   <tr>
     <th>HDDDEV</th>
-    <td><p align="justify">Устанавливает блочное устройство для <code>hddtemp</code> через запятую или <code>all</code> для всех возможных. По умолчанию <code>all</code>.</p></td>
+    <td><p align="justify">Устанавливает блочное устройство для <code>hddtemp</code> через запятую или <code>all</code> для всех возможных. <code>disable</code> отключит монитор температуры HDD. По умолчанию <code>all</code>.</p></td>
   </tr>
   <tr>
     <th>HDDTEMPCMD</th>
@@ -460,9 +460,9 @@ sudo make install
 <h4><a name="deguiconf" class="anchor" href="#deguiconf"><span class="octicon octicon-link"></span></a>Настройка DataEngine</h4>
 <p align="justify"><b>Своя команда:</b> <i><b>ЗАМЕЧАНИЕ</b> это поле может привести к "зависанию" компьютера.</i> Команды, которые будут запущены для соответствующего поля. Например, <code>wget -qO- http://ifconfig.me/ip</code> вернет внешний IP.</p>
 
-<p align="justify"><b>Устройство GPU:</b> Выберете одно из поддерживаемых устройств GPU. <code>auto</code> включит автоматическое определение устройства. По умолчанию <code>auto</code>.</p>
+<p align="justify"><b>Устройство GPU:</b> Выберете одно из поддерживаемых устройств GPU. <code>auto</code> включит автоматическое определение устройства, <code>disable</code> отключит все мониторы GPU. По умолчанию <code>auto</code>.</p>
 
-<p align="justify"><b>HDD:</b> Выберете один из HDD для монитора температуры HDD. <code>all</code> включит монитор для всех доступных устройств. По умолчанию <code>all</code>.</p>
+<p align="justify"><b>HDD:</b> Выберете один из HDD для монитора температуры HDD. <code>all</code> включит монитор для всех доступных устройств, <code>disable</code> отключит монитор температуры HDD. По умолчанию <code>all</code>.</p>
 
 <p align="justify"><b>Команда hddtemp:</b> Введите команду, которая будет запущена для hddtemp DataEngine. По умолчанию <code>sudo hddtemp</code>.</p>
 
