updated ptm pages

--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -66,14 +66,13 @@ sudo make install
 <ul>
   <li>kdebase-workspace</li>
   <li>kdebindings-python2</li>
+  <li>lm_sensors</li>
   <li>automoc4 <i>(make)</i></li>
   <li>cmake <i>(make)</i></li>
-  <li>kdebase-runtime <i>(make)</i></li>
-  <li>lm_sensors <i>(опционально, для определения температурного устройства)</i></li>
   <li>net-tools <i>(опционально, для всплывающих подсказок)</i></li>
   <li>sysstat <i>(опционально, для всплывающих подсказок)</i></li>
   <li>hddtemp <i>(опционально, для контроля за температурой HDD)</i></li>
-  <li>один из поддерживаемых музыкальных плееров - <a href="http://amarok.kde.org/">amarok</a>, <a href="http://www.clementine-player.org/">clementine</a>, <a href="http://www.musicpd.org/">mtd</a> или <a href="http://qmmp.ylsoftware.com/">qmmp</a> <i>(опционально, для контроля за музыкальным плеером)</i>
+  <li>один из поддерживаемых музыкальных плееров - <a href="http://amarok.kde.org/">amarok</a>, <a href="http://www.clementine-player.org/">clementine</a>, <a href="http://www.musicpd.org/">mpd</a> или <a href="http://qmmp.ylsoftware.com/">qmmp</a> <i>(опционально, для контроля за музыкальным плеером)</i>
   <li>проприетарный видеодрайвер <i>(опционально, для контроля за GPU)</i></li></li>
 </ul>
 <!-- end of install block -->
