--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -65,14 +65,13 @@ sudo make install
 <ul>
   <li>kdebase-workspace</li>
   <li>kdebindings-python2</li>
+  <li>lm_sensors</li>
   <li>automoc4 <i>(make)</i></li>
   <li>cmake <i>(make)</i></li>
-  <li>kdebase-runtime <i>(make)</i></li>
-  <li>lm_sensors <i>(optional, for definition temperature device)</i></li>
   <li>net-tools <i>(optional, for popup messages)</i></li>
   <li>sysstat <i>(optional, for popup messages)</i></li>
   <li>hddtemp <i>(optional, for HDD temperature monitor)</i></li>
-  <li>one of supported music player - <a href="http://amarok.kde.org/">amarok</a>, <a href="http://www.clementine-player.org/">clementine</a>, <a href="http://www.musicpd.org/">mtd</a> or <a href="http://qmmp.ylsoftware.com/">qmmp</a> <i>(optional, for music player monitor)</i>
+  <li>one of supported music player - <a href="http://amarok.kde.org/">amarok</a>, <a href="http://www.clementine-player.org/">clementine</a>, <a href="http://www.musicpd.org/">mpd</a> or <a href="http://qmmp.ylsoftware.com/">qmmp</a> <i>(optional, for music player monitor)</i>
   <li>proprietary video driver <i>(optional, for GPU monitor)</i></li></li>
 </ul>
 <!-- end of install block -->
