--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -339,6 +339,8 @@ sudo make install
 </table>
 
 <h4><a name="advanced" class="anchor" href="#advanced"><span class="octicon octicon-link"></span></a>Advanced settings</h4>
+<p align="justify"><b>Enable popup:</b> Uncheck box if you do not use popup messages.</p>
+
 <p align="justify"><b>Custom time format:</b></p>
 <table>
   <tr>
