--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -340,6 +340,8 @@ sudo make install
 </table>
 
 <h4><a name="advanced" class="anchor" href="#advanced"><span class="octicon octicon-link"></span></a>Расширенные настройки</h4>
+<p align="justify"><b>Вертикальная разметка:</b> Использовать вертикальную разметку вместо горизонтальной.</p>
+
 <p align="justify"><b>Включить всплывающие сообщения:</b> Нажмите на чекбокс, если вы не используете всплывающие сообщения.</p>
 
 <p align="justify"><b>Свой формат времени:</b></p>
