update ptm pages

--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -244,7 +244,7 @@ sudo make install
     <td><p align="justify">Swap, GB, <code>----</code>.</p></td>
   </tr>
   <tr>
-    <th rowspan="3">HDD usage label</th>
+    <th rowspan="5">HDD usage label</th>
     <td><code>$hddN</code></td>
     <td><p align="justify">Usage for mount point N, %, <code>-----</code>. For example <code>$hdd0</code>.</p></td>
   </tr>
@@ -255,6 +255,14 @@ sudo make install
   <tr>
     <td><code>$hddgbN</code></td>
     <td><p align="justify">Usage for mount point N, GB, <code>-----</code>. For example <code>$hddgb0</code>.</p></td>
+  </tr>
+  <tr>
+    <td><code>$hddtotmbN</code></td>
+    <td><p align="justify">Total size of mount point N, MB, <code>-----</code>. For example <code>$hddtotmb0</code>.</p></td>
+  </tr>
+  <tr>
+    <td><code>$hddtotgbN</code></td>
+    <td><p align="justify">Total size of mount point N, GB, <code>-----</code>. For example <code>$hddtotgb0</code>.</p></td>
   </tr>
   <tr>
     <th rowspan="2">HDD speed label</th>
