--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -245,7 +245,7 @@ sudo make install
     <td><p align="justify">swap, GB, <code>----</code>.</p></td>
   </tr>
   <tr>
-    <th rowspan="3">HDD</th>
+    <th rowspan="5">HDD</th>
     <td><code>$hddN</code></td>
     <td><p align="justify">Занятость точки монтирования N, %, <code>-----</code>. Пример: <code>$hdd0</code>.</p></td>
   </tr>
@@ -256,6 +256,14 @@ sudo make install
   <tr>
     <td><code>$hddgbN</code></td>
     <td><p align="justify">Занятость точки монтирования N, GB, <code>-----</code>. Пример: <code>$hddgb0</code>.</p></td>
+  </tr>
+  <tr>
+    <td><code>$hddtotmbN</code></td>
+    <td><p align="justify">Размер точки монтирования N, MB, <code>-----</code>. Пример: <code>$hddtotmb0</code>.</p></td>
+  </tr>
+  <tr>
+    <td><code>$hddtotgbN</code></td>
+    <td><p align="justify">Размер точки монтирования N, GB, <code>-----</code>. Пример: <code>$hddtotgb0</code>.</p></td>
   </tr>
   <tr>
     <th rowspan="2">Скорость HDD</th>
