--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -351,6 +351,8 @@ sudo make install
 
 <p align="justify"><b>Enable popup:</b> Uncheck box if you do not use popup messages.</p>
 
+<p align="justify"><b>Add stretch:</b> Add stretch (spacer) to the selected side of the widget.</p>
+
 <p align="justify"><b>Custom time format:</b></p>
 <table>
   <tr>
