--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -352,6 +352,8 @@ sudo make install
 
 <p align="justify"><b>Включить всплывающие сообщения:</b> Нажмите на чекбокс, если вы не используете всплывающие сообщения.</p>
 
+<p align="justify"><b>Добавить пустое пространство:</b> Добавить пустое пространство в указанное место виджета.</p>
+
 <p align="justify"><b>Свой формат времени:</b></p>
 <table>
   <tr>
