add rss support

--- a/ru/index.html
+++ b/ru/index.html
@@ -14,6 +14,7 @@ title: arcanis
         <label class="spoiler">
           <input type="checkbox" tabindex="-1">
           <div class="box">
+            <a href="/ru/feed.xml"><img src="/resources/feed-icon-14x14.png"></a>
             <a href="/ru/blog/">Блог</a> <span class="close">(скрыть)</span><span class="open">(показать)</span>
             <blockquote>
             {% for post in site.categories.ru limit:3 %}
