--- a/authors.html
+++ b/authors.html
@@ -22,6 +22,7 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
     <li>The source theme was created by <a href="https://github.com/orderedlist/minimal">Steve Smith</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
     <li>Disqus, which is used for comment block, has own <a href="http://help.disqus.com/customer/portal/articles/466260-terms-of-service">custom license</a>.</li>
     <li>The spoiler block was created by <a href="http://www.cyberforum.ru/post5368179.html">markeley</a> and <a href="http://habrahabr.ru/post/167151/">Defff</a> and it looks like it has no any license.</li>
+    <li>This site uses RSS template, which was suggested by <a href="https://github.com/snaptortoise/jekyll-rss-feeds">snaptortoise</a>.</li>
     <li>Google Custom Search is licensed under own <a href="https://support.google.com/customsearch/answer/1714300">custom license</a>.</li>
     <li>Sharethis have own <a href="http://www.sharethis.com/legal/publisher-terms-of-use">custom license</a> too.</li>
   </ul>
