--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ title: arcanis' homepage
         <label class="spoiler">
           <input type="checkbox" tabindex="-1">
           <div class="box">
+            <a href="/feed.xml"><img src="/resources/feed-icon-14x14.png"></a>
             <a href="/blog/">Blog</a> <span class="close">(hide)</span><span class="open">(show)</span>
             <blockquote>
             {% for post in site.categories.en limit:3 %}
