--- a/ru/authors.html
+++ b/ru/authors.html
@@ -24,6 +24,7 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
     <li>Исходная тема была создана <a href="https://github.com/orderedlist/minimal">Steve Smith</a> и лицензирована под <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
     <li>Disqus, который используется для блока комментариев, имеет собственную <a href="http://help.disqus.com/customer/portal/articles/466260-terms-of-service">кастомную лицензию</a>.</li>
     <li>Код для спойлеров был предложен <a href="http://www.cyberforum.ru/post5368179.html">markeley</a> и <a href="http://habrahabr.ru/post/167151/">Defff</a>, и, судя по всему, он не имеет никакой лицензии.</li>
+    <li>Данный сайт использует RSS шаблон, который был предложен <a href="https://github.com/snaptortoise/jekyll-rss-feeds">snaptortoise</a>.</li>
     <li>Google Custom Search имеет собственную <a href="https://support.google.com/customsearch/answer/1714300">кастомную лицензию</a>.</li>
     <li>Sharethis тоже имеет собственную <a href="http://www.sharethis.com/legal/publisher-terms-of-use">кастомную лицензию</a>.</li>
   </ul>
