--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -43,7 +43,7 @@ links:
 <h3><a name="instruction" class="anchor" href="#instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
   <li><p align="justify">Скачайте <a href="https://github.com/arcan1s/pytextmonitor/releases">архив</a> с актуальной версией исходных файлов.</p></li>
-  <li><p align="justify">Извлеките из него файлы и установите DataEngine:</p>
+  <li><p align="justify">Извлеките из него файлы и установите:</p>
 {% highlight bash %}
 cd /путь/к/извлеченным/файлам/
 mkdir build && cd build
@@ -336,7 +336,7 @@ sudo make install
     <td><p align="justify">Общее число процессов.</p></td>
   </tr>
   <tr>
-    <th rowspan="1">Package manager label</th>
+    <th rowspan="1">Пакетный менеджер</th>
     <td><code>$pkgcountN</code></td>
     <td><p align="justify">Число пакетов, доступных для обновления, для команды N.</p></td>
   </tr>
