update netctl-gui pages

--- a/ru/projects/netctl-gui.html
+++ b/ru/projects/netctl-gui.html
@@ -10,7 +10,7 @@ license: GPLv3
 links:
     - Страница на <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml">Softpedia</a>
     - Страница на <a href="http://kde-apps.org/content/show.php?content=164490">kde-apps.org</a>
-    - <a href="https://aur.archlinux.org/packages/netctl-gui">Пакет в AUR</a>
+    - <a href="https://aur.archlinux.org/pkgbase/netctl-gui/">Пакет в AUR</a>
 ---
 <!-- info block -->
 <h2><a name="info" class="anchor" href="#info"><span class="octicon octicon-link"></span></a>Информация</h2>
