--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -9,7 +9,7 @@ license: GPLv3
 links:
     - Page on <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml">Softpedia</a>
     - Page on <a href="http://kde-apps.org/content/show.php?content=164490">kde-apps.org</a>
-    - <a href="https://aur.archlinux.org/packages/netctl-gui">AUR package</a>
+    - <a href="https://aur.archlinux.org/pkgbase/netctl-gui/">AUR package</a>
 ---
 <!-- info block -->
 <h2><a name="info" class="anchor" href="#info"><span class="octicon octicon-link"></span></a>Information</h2>
